[build-system]
requires = [
  "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "2blib"
version = "0.0.1"
authors = [
  { name="Samlarn", email="author@fake.com" },
]
description = "2b data layer"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Samlarn/2blib"
Issues = "https://github.com/Samlarn/2blib/issues"