[metadata]
name = 2blib
version = 0.0.1
author = Nicklas Jonsson
author_email = fake@email.com
description = Package for 2b.
long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/Samlarn/2blib
project_urls =
    Bug Tracker = https://github.com/Samlarn/2blib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src